--- a/templates/results.html
+++ b/templates/results.html
@@ -8,13 +8,13 @@
 
         {% if result == 0 %}
 
-            <p> You will probably not experiment this drug <p>
+            <u> You will probably not experiment this drug </u>
 
         {% endif %}
 
         {% if result == 1 %}
 
-            <h1> You  will probably experiment this drug  </h1>
+            <u> You  will probably experiment this drug  </u>
 
         {% endif %}
 
