--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,7 +10,7 @@
 {% block content  %}
     <h1>Welcome on my drug prediction API</h1>
 
-    <p>In this website you will be able to predict your Cannabis consumption base on your infos 
+    <p>In this website you will be able to predict your Cannabis consumption based on your infos 
         and your presonnality scores !
     </p>
 
